Sudoku refactor